vlib/v/checker/tests/fn_param_import_sym_conflict.out
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:1:8: warning: module 'arrays' is imported but never used
    1 | import arrays
      |        ~~~~~~
    2 | import maps
    3 |
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:2:8: warning: module 'maps' is imported but never used
    1 | import arrays
    2 | import maps
      |        ~~~~
    3 |
    4 | // FnDecl
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:5:6: error: duplicate of an import symbol `arrays`
    3 |
    4 | // FnDecl
    5 | fn x(arrays []int) {
      |      ~~~~~~
    6 |
    7 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:9:1: error: duplicate of an import symbol `maps`
    7 | }
    8 |
    9 | fn maps() {
      | ~~~~~~~~~
   10 |
   11 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:13:9: error: duplicate of an import symbol `arrays`
   11 | }
   12 |
   13 | fn maps(arrays []int) {
      |         ~~~~~~
   14 |
   15 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:20:5: error: duplicate of an import symbol `arrays`
   18 | struct Foo {}
   19 |
   20 | fn (arrays Foo) x() {
      |     ~~~~~~
   21 |
   22 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:24:5: error: duplicate of an import symbol `arrays`
   22 | }
   23 |
   24 | fn (arrays Foo) y(maps []int) {
      |     ~~~~~~
   25 |
   26 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:28:16: error: duplicate of an import symbol `arrays`
   26 | }
   27 |
   28 | fn (foo Foo) z(arrays []int) {
      |                ~~~~~~
   29 |    
   30 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:32:5: error: duplicate of an import symbol `arrays`
   30 | }
   31 |
   32 | fn (arrays Foo) maps() {
      |     ~~~~~~
   33 |
   34 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:36:1: error: duplicate of an import symbol `arrays`
   34 | }
   35 |
   36 | fn (foo Foo) arrays() {
      | ~~~~~~~~~~~~~~~~~~~~~
   37 |    
   38 | }
vlib/v/checker/tests/fn_param_import_sym_conflict.vv:42:11: error: duplicate of an import symbol `arrays`
   40 | // AnonFn
   41 | fn y() {
   42 |     _ := fn (arrays []int) {}
      |              ~~~~~~
   43 | }