vlib/v/checker/tests/fn_param_import_sym_conflict.vv
import arrays
import maps

// FnDecl
fn x(arrays []int) {

}

fn maps() {

}

fn maps(arrays []int) {

}

// FnDecl with receiver
struct Foo {}

fn (arrays Foo) x() {

}

fn (arrays Foo) y(maps []int) {

}

fn (foo Foo) z(arrays []int) {
	
}

fn (arrays Foo) maps() {

}

fn (foo Foo) arrays() {
	
}

// AnonFn
fn y() {
	_ := fn (arrays []int) {}
}
